tests/error/function_type_compount_literal.c
// fail "Cast to function is illegal."

int main(){
    
    (int()){main};
    
    return 0;
}
